--- a/VishwamCameraApp/app/src/main/res/values/themes.xml
+++ b/VishwamCameraApp/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.JwccGateApp" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.JwccGateApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorPrimary">@color/jioBlue</item>
+        <item name="colorPrimaryDark">@color/jioBlue</item>
         <item name="colorAccent">@color/teal_200</item>
         <!-- Customize your theme here. -->
     </style>
