1. Added some screens in lib with changing ui effects

--- a/VishwamCameraApp/app/src/main/res/values/colors.xml
+++ b/VishwamCameraApp/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="whitecolor">#80FFFFFF</color>
-
+    <color name="titleColor">#DE000000</color>
 </resources>
