--- a/VishwamCameraApp/vishwamcameralib/src/main/res/layout/activity_after_capture.xml
+++ b/VishwamCameraApp/vishwamcameralib/src/main/res/layout/activity_after_capture.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:animateLayoutChanges="true"
     tools:context=".Activities.AfterCapture">
 
     <android.support.v7.widget.Toolbar
@@ -13,6 +14,64 @@
         app:title="Event Name"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="@color/jioBlue"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:id="@+id/layout1"
+        android:orientation="vertical">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="390dp"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="200dp"
+            android:layout_gravity="top">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:id="@+id/imageView1"/>
+        </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="380dp"
+                android:layout_margin="15dp"
+                app:cardCornerRadius="200dp"
+                app:cardBackgroundColor="@color/whiteopacity"
+                android:layout_gravity="top">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/tick_plain2"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textSize="20sp"
+                    android:text="Authentication Successful"/>
+</LinearLayout>
+            </android.support.v7.widget.CardView>
+    </FrameLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/layout2"
+        android:visibility="gone"
+        android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
@@ -23,6 +82,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:id="@+id/imageView"/>
 
     </android.support.v7.widget.CardView>
@@ -42,5 +102,5 @@
         android:layout_marginTop="20dp"
         android:text="Welcome to JWCC. \nHave a good time. \nYou may proceed to the event"/>
 
-
+    </LinearLayout>
 </LinearLayout>
